# quizlet2anki

./: Cargo.toml  readme.md
src/: main.rs
