[package]
name = "quizlet-anki-export"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.16.0"
color-eyre = "0.6.2"
tokio = {version = "1.27.0", features = ["macros", "rt-multi-thread"]}
reqwest = "0.11.16"
genanki-rs = "0.3.1"
